<resources>
    <string name="app_name">CS2340-First_Project</string>
    <string name="title_home">Home</string>
    <string name="title_exams">Exams</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_todo">Todo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_weekly_schedule">Schedule</string>
    <string name="checkbox">CheckBox</string>
    <string-array name="category_options">
        <item>Other</item>
        <item>Exam</item>
        <item>Assignment</item>
    </string-array>
    <string-array name="completeness_options">
        <item>Incomplete</item>
        <item>Complete</item>
    </string-array>
</resources>