<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_exams"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_exams" />

    <item
        android:id="@+id/navigation_weekly_schedule"
        android:icon="@drawable/schedule_icon"
        android:title="@string/title_weekly_schedule" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_todo" />

</menu>