<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cs2340_first_project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_exams"
        android:name="com.example.cs2340_first_project.ui.exams.ExamsFragment"
        android:label="@string/title_exams"
        tools:layout="@layout/fragment_exams" />

    <fragment
        android:id="@+id/navigation_weekly_schedule"
        android:name="com.example.cs2340_first_project.ui.weeklyschedule.WeeklyScheduleFragment"
        android:label="@string/title_weekly_schedule"
        tools:layout="@layout/fragment_weekly_schedule" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.cs2340_first_project.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.example.cs2340_first_project.ui.todo.TodoFragment"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_todo" />
</navigation>